Dynamic class componenet and Dynamic function component

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
   text-align: center;
+  /* display:inline-block;
+  border:1px solid;
+  width: 200px;
+  padding:20px;
+  margin:20px; */
 }
