SPA, MPA, Setup router

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,20 @@
   padding:20px;
   margin:20px; */
 }
+
+
+.nav-bar ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-bar li{
+  display: inline-block;
+  margin: 20px;
+}
+
+.nav-bar a{
+  text-decoration: none;
+  color: black;
+}
